    [Reported by Stefano Zacchiroli <zack@debian.org>]
  * lib/paragraph.[ch], grep-dctrl/grep-dctrl.c: Use the actual spelling of
    field names in output, instead of the command line spelling.
    Closes: #209134 (keyword case shouldn't be influenced by -s)
    Reported by Dan Jacobson <jidanni@jidanni.org>.
  * grep-dctrl/grep-dctrl.c: Clean up some dead code.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Wed, 19 Oct 2011 21:09:47 +0300

dctrl-tools (2.18ubuntu1) oneiric; urgency=low

  * lib/msg.h, grep-dctrl/rc.c, join-dctrl/join-dctrl.c: Pass the arguments to
    message() in the right order (fixes FTBFS; lp: #774391, Closes: #624707)

 -- Michael Bienia <geser@ubuntu.com>  Mon, 02 May 2011 08:25:34 +0100

dctrl-tools (2.18) unstable; urgency=low

  * debian/rules: Override prefix and sysconfdir even for building
    Closes: #607359 (doesn't read /etc/grep-dctrl.rc)
    Reported by Jakub Wilk <jwilk@debian.org>
    Closes: #611596 (experimental's version of grep-dctrl doesn't grep anything)
    Reported by Rogério Brito <rbrito@ime.usp.br>
  * Upload to unstable.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 06 Feb 2011 11:18:33 +0200

dctrl-tools (2.17) experimental; urgency=low

  * Merge 2.14.3, 2.14.4, and 2.14.5.
  * Removed Jon Bernard <jbernard@debian.org> from uploaders
    (no uploads in two years; seems to have left the team mailing list)
  * Moved detailed installation from debian/rules to GNUmakefile
  * Moved debian/README to ./README
  * changed from my own build system to Debhelper v8 (dh).

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 04 Dec 2010 20:41:30 +0200

dctrl-tools (2.16) experimental; urgency=low

  * Merge 2.14.2
  * tbl-dctrl: Figure out the fields from the input if no '-c' is given.
    Closes: #596424 reported by myself

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 11 Sep 2010 22:45:04 +0300

dctrl-tools (2.15) experimental; urgency=low

  [ Antti-Juhani Kaijanaho ]