@@ -19,8 +19,9 @@ dctrl-tools (2.19) UNRELEASED; urgency=low
     Closes: #209134 (keyword case shouldn't be influenced by -s)
     Reported by Dan Jacobson <jidanni@jidanni.org>.
   * grep-dctrl/grep-dctrl.c: Clean up some dead code.
+  * grep-dctrl: Rewrite predicate code to use a tree instead of a bytecode.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Wed, 19 Oct 2011 21:09:47 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 20 Oct 2011 00:24:39 +0300
 
 dctrl-tools (2.18ubuntu1) oneiric; urgency=low
 
